<resources>
    <string name="app_name">CheckDo</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_register">REGISTER</string>
    <string name="action_link_to_register">Need an account? Sign up now</string>
    <string name="action_google_login">Login With Google</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="welcome">Welcome</string>
    <string name="action_logout">LOGOUT</string>
    <string name="prompt_fullname">Fullname</string>

    <string name="action_google_register">Register with Google</string>
    <string name="title_activity_notes">NotesActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_delete_this">deleteThis</string>
    <string name="title_activity_all_list_ui"></string>
    <string name="title_activity_calender_ui">CalenderUI</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="no_event">No event</string>
    <string name="calendar_permission_required">Calendar access is required to manage your events</string>
    <string name="all_day">All day</string>
    <string name="grant_access">Grant access</string>
    <string name="today">Today</string>
    <string name="title">Title</string>
    <string name="event_time">Event time</string>
    <string name="event_calendar">Event calendar</string>
    <string name="warning_empty_title">Event title is required</string>
    <string name="choose_calendar">Choose a calendar</string>
    <string name="create_event">Create new event</string>
    <string name="edit_event">Edit event</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Delete this event?</string>
    <string name="confirm_discard_changes">Discard changes?</string>
    <string name="warning_missing_calendar">Please choose a calendar</string>
    <string name="end_time">Ends\n%s</string>
    <string name="default_calendar_name">Local Calendar</string>
    <string name="event_created">Event created.</string>
    <string name="event_updated">Event updated.</string>
    <string name="event_deleted">Event deleted.</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="fahrenheit">%1$.1f\u00b0F</string>
    <string name="location_permission_required">Updating weather requires location access</string>
    <string name="week_start">Week start</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="calendars">Calendars</string>
    <string name="error_location">Unable to determine your location</string>
    <string name="title_activity_create_new_list">CreateNewList</string>

    <string name="title_activity_plan_my_day">PlanMyDayActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_list_ui">ListUI</string>


</resources>
