<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"

xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@color/bg"
android:gravity="center"
android:orientation="vertical"
android:padding="10dp"
tools:context="dev.majed.checkdo.RegisterActivity"
    >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_fullname"
        android:padding="10dp"
        android:inputType="textCapWords"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:maxLines="1" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="20dip"
        android:text="@string/action_register"
        android:textColor="@color/white"
        android:background="#ea4c88" />


</LinearLayout>

</LinearLayout>
