<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dev.majed.checkdo.LoginActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >


<LinearLayout
    android:id="@+id/email_login_form"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:maxLines="1"
         />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:maxLines="1"
        android:background="@color/white"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
         />


    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/action_sign_in"
        android:layout_marginTop="20dip"
        android:textColor="@color/btn_login" />

    <com.google.android.gms.common.SignInButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/google_sign_in_button"
        android:textColor="@color/white"
        android:layout_marginTop="20dip"
         />

    <Button
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textAllCaps="false"
        android:background="@null"
        android:text="@string/action_link_to_register"
        android:layout_marginTop="40dip"
        android:textColor="@color/white"
         />
</LinearLayout>

</LinearLayout>